# claco.deployments

./: .dockerignore  .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  configure.sh  docker-compose.yml  pyproject.toml
api-client/: Dockerfile  docker-entrypoint.sh
api-server/: Dockerfile  docker-entrypoint.sh  envoy.yaml  supervisord.conf
jenkins-controller/: Dockerfile  jenkins.yml  plugins.txt
jenkins-node/: Dockerfile
jenkins/agent/: Dockerfile  docker-entrypoint.sh
jenkins/server/: Dockerfile  jenkins.yml  plugins.txt  seed.groovy
jobs/: seed.groovy
metrics/grafana/: Dockerfile  custom.ini  datasources.yml
metrics/prometheus/: Dockerfile  prometheus.yml
protos/: deployments.proto
src/python/deployments/: utils.py
src/python/deployments/api/: __init__.py  client.py  service.py
src/python/deployments/cli/: __init__.py
src/python/deployments/grpc/: __init__.py  deployments.pb  deployments.swagger.json  deployments_pb2.py  deployments_pb2.pyi  deployments_pb2_grpc.py
src/python/deployments/middleware/: __init__.py  interceptors.py  servicers.py
src/python/deployments/templates/: jenkins.xml.j2
src/python/tests/: conftest.py
src/python/tests/api/: test_client.py  test_service.py
src/python/tests/grpc/: test_conftest.py
vault-server/: Dockerfile
vault/proxy/: Dockerfile  config.hcl  docker-entrypoint.sh
vault/proxy/policies/: casc-policy.hcl  grafana-policy.hcl  jenkins-policy.hcl  metrics-policy.hcl
vault/server/: Dockerfile  config.hcl
(+6 files in other folders)
